[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "satellite_viewer"
version = "0.0.1"
authors = [
  { name="Chester Corpuz", email="livtilithurts@gmail.com" },
]

description = "A package for satellite_viewer backend"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "flask>=3.1.0",
    "pydantic>=2.10.6"
]
